# cyclomatic_complexity

./: .gitignore  README.md  pyproject.toml
cyclomatic_complexity/: __init__.py  main.py
tests/: testResult.py  test_main.py
tests/data/: src1.c
tests/data/data2/: src2.py
