[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yangwangjinxin_cyclomatic_complexity"
version = "0.0.3"
dependencies = [
  'lizard >= 1.17.0, <2',
]
authors = [
  { name="yangwangjinxing", email="yangwangjinxing@163.com" },
]
description = "cyclomatic complexity"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/yangwangjinxing/cyclomatic_complexity"
"Bug Tracker" = "https://github.com/yangwangjinxing/cyclomatic_complexity/issues"
